# Concurrent

./: .gitignore  CMakeLists.txt  README.md
src/: data.cpp  data.hpp  main.cpp  model.cpp  model.hpp  parallel.cpp  parallel.hpp  parallel_v2.cpp  parallel_v2.hpp  serial.cpp  serial.hpp  timer.hpp
tests/: check_model.cpp  test_correctness.cpp
